Size the main menu as a fraction of the screen, not a fixed pixel box
The panel was BASE_WIDTH=560 x BASE_HEIGHT=344 clamped to the window, which
reads as a small config dialog at real resolutions (roughly a quarter of a
1080p screen) rather than a client. It's now sized at ~82% of the available
(already GUI-scale-adjusted) window on each axis, clamped to a sane min/max,
with the existing menuScale setting still applying as a multiplier on top.

Module cards grow with it (52 -> 68px tall, bigger icon tile, more breathing
room) since a much larger window with the old compact single-row cards would
look sparse rather than premium. The sidebar, header and nav rows scale to
match, and the Nebrel+ benefit cards get the same treatment so the whole menu
reads as one consistently-scaled surface instead of a big frame around
small-window components.

Verified with tools/verify-core.sh (476 checks) and tools/check-mappings.py
(175 source files resolve against Yarn); gradlew build/RunClient are not
available in this environment.